--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atvi-wb",
   "version": "0.0.1",
   "description": "Repositório com códigos de auxílio para o desenvolvimento de uma agenda de cadastro de clientes, em TypeScript. Os códigos são para auxílio da ATVI da disciplina de técnicas de programação I.",
-  "main": "out/main.js",
+  "main": "out/app/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^16.7.10",
-    "@types/prompt-sync": "^4.1.1"
+    "@types/prompt-sync": "^4.1.1",
+    "prompt-sync": "^4.2.0"
   }
 }
